# HSI-WebApp

backend/app/: pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: ff1f66df8955_add_user.py
backend/app/app/: main.py
backend/app/app/api/: deps.py
backend/app/app/core/: config.py
backend/app/app/crud/: base.py
backend/app/app/tests/utils/: user.py
frontend/: nuxt.config.js  package-lock.json  package.json
frontend/layouts/: default.vue
frontend/pages/: index.vue  login.vue
